# cattools

./: README.md  xosd_volume
0.6.0/: ChangeLog  dump-backup.in
0.6.0/samples/: dump-backup.rc
birthday-reminder/: TODO  build.xml  setClasspath.sh
birthday-reminder/data/: bdays.properties  bdays.script
birthday-reminder/src/main/bash/: startServer.sh
birthday-reminder/src/main/java/: ClientExample.java  EmbedExample.java  MemoryExample.java
dump-backup/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  dump-backup.in
dump-backup/samples/: dump-backup.dirs
gensig/: gensig.pl
hvb2homebank/: hvb2homebank.py
read-rdf/: file.c  file.h  parser.h  rdf.c  read-rdf.h  read-rdf2.h
scripts/: convert-mkv-audio.sh  encode-hq-dev.sh  encode-hq-quantizer.sh  encode-hq-xvid.sh  encode-hq.sh  mkv-container.sh  reduce-size.sh  set-background.sh
slackselect/: ChangeLog  README
tags/dump-backup/0.6.0/: Makefile.in  NEWS  README
trunk/birthday-reminder/: TODO  build.xml
trunk/birthday-reminder/config/: log4j.xml
trunk/birthday-reminder/data/: bdays.properties  bdays.script
trunk/dump-backup/: ChangeLog  Makefile.in  NEWS  README  configure  configure.ac  dump-backup.in
trunk/dump-backup/samples/: dump-backup.exc
trunk/read-rdf/: Makefile  feeds  feeds-all  parser.c  rdf.h  read-rdf.c  read-rdf2.c  xmlparser.c  xmlparser.h
trunk/scripts/: convert-mkv-audio.sh  encode-hq-quantizer.sh  encode-hq-xvid.sh  mkv-container.sh  ogg2mp3  set-background.sh  video23gp.sh
trunk/slackselect/: README.kernel  slackselect.sh
(+7 files in other folders)
