#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT([dump-backup],[0.6.1-dev],[asturioweb@gmx.net])
#AM_INIT_AUTOMAKE([-Wall -Werror])
AM_INIT_AUTOMAKE([-Wall -Werror])


# Checks for programs.
AC_PROG_LN_S
AC_PROG_GREP
AC_PROG_SED

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile dump-backup])
AC_OUTPUT
